Attempt at fixing flickering: force blocking font-display, better preloading and remove view transitions. Also adds contain:paint to avoid breaking shit.

--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -18,6 +18,6 @@ footer a:hover {
 }
 
 .shasum {
-  font-family: 'Jetbrains Mono', monospace;
+  font-family: 'Google Sans Code';
   color: var(--ctp-mauve);
 }
