--- a/src/app/pages/blog/posts/_shared-styles.scss
+++ b/src/app/pages/blog/posts/_shared-styles.scss
@@ -1,12 +1,12 @@
 @mixin apply {
   h1 {
     margin: 0;
-    font-family: 'Crimson Pro', serif;
+    font-family: 'Crimson Pro';
     color: var(--ctp-text);
   }
   h2 {
     margin: 0;
-    font-family: 'Crimson Pro', serif;
+    font-family: 'Crimson Pro';
     color: var(--ctp-text);
   }
   hr {
