--- a/src/app/pages/keys/keys.component.scss
+++ b/src/app/pages/keys/keys.component.scss
@@ -1,5 +1,5 @@
 li {
-  font-family: 'Jetbrains Mono', monospace;
+  font-family: 'Google Sans Code';
 }
 .key-content {
   display: flex;
