--- a/src/styles.scss
+++ b/src/styles.scss
@@ -49,6 +49,7 @@
   --radius-lg: 16px;
   --shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
   --shadow-lg: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
+  font-display: block !important;
 }
 
 /* Catppuccin Latte Color Variables (Light) */
@@ -98,7 +99,7 @@ app-root {
 }
 
 body {
-  font-family: Rubik, sans-serif;
+  font-family: 'Rubik';
   margin: 0;
   padding: 0;
   line-height: 1.6;
@@ -106,8 +107,12 @@ body {
   word-break: break-word;
 }
 h1,
-h2 {
-  font-family: Cabin, sans-serif;
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: 'Cabin';
   color: var(--ctp-mauve);
 }
 
@@ -261,24 +266,9 @@ section {
 }
 
 router-outlet {
-  view-transition-name: page;
+  contain: paint;
 }
 
-::view-transition-old(page),
-::view-transition-new(page) {
-  animation-duration: 0.4s;
-  animation-timing-function: ease-in-out;
-  animation-name: fade;
-}
-
-@keyframes fade {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
-}
 .copy-button {
   padding: 2px 8px;
   margin-left: 5px;
